--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "16.2.0",
     "react-native": "0.52.2",
+    "react-native-google-places-autocomplete": "^1.3.6",
     "react-native-maps": "^0.19.0",
     "react-native-vector-icons": "^4.5.0"
   },
