--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.52.2",
     "react-native-google-places-autocomplete": "^1.3.6",
     "react-native-maps": "^0.19.0",
+    "react-native-side-menu": "^1.1.3",
     "react-native-vector-icons": "^4.5.0"
   },
   "devDependencies": {
